--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,12 +10,10 @@ main:
   - name: Projects
     url: '#projects'
     weight: 30
-   - name: Acomplishments and Experience
-    url: '#accomplishments'
+   - name: Skills
+    url: '#skills'
     weight: 40
-  - name: Accomplishments
-    url: '#accomplishments'
-    weight: 60
+
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
