--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,8 +10,8 @@ main:
   - name: Projects
     url: '#projects'
     weight: 30
-  - name: Skills
-    url: '#skills'
+  - name: Dataengineering
+    url: 'dataengineering'
     weight: 40
 
 
